CMAKE_MINIMUM_REQUIRED(VERSION 2.8.0)
PROJECT(HoloOpenCVHelper)
MESSAGE("Building ${PROJECT_NAME}")


FIND_PACKAGE(OpenCV REQUIRED core imgproc features2d calib3d)

MESSAGE(${OpenCV_LIBS})

INCLUDE_DIRECTORIES(
	${OpenCV_INCLUDE_DIRS}
)
INCLUDE_DIRECTORIES(
	src
)

FILE(GLOB_RECURSE SOURCE_FILES "src/*")
MESSAGE(${SOURCE_FILES})

ADD_LIBRARY( HoloOpenCVHelper SHARED
	HoloOpenCVHelper_core.cpp
	${EIGEN_FILES}
	${SOURCE_FILES}
)

TARGET_LINK_LIBRARIES( HoloOpenCVHelper 
	${OpenCV_LIBS}
)
